--- a/FinalPI/Web.config
+++ b/FinalPI/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="ledzeppelin" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ledzeppelin1; Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="ledzeppelin" connectionString="Data Source=.\SQLEXPRESS; User id=sa;Password=Senha@123;Initial Catalog=ASPNETMVC5Corinthians" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
